@@ -1,0 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE doc [
+<!ENTITY newl "&#13;">
+]>
+<doc>&newl;</doc>
