@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE doc [
+<!ENTITY newl "&#13;">
+]>
+<doc>
+</doc>
